tests/NormalTests/paczka1/fuzzy1/51406810.err
Error in line 7: S600 S600 32,1
Error in line 13: yXcJ S613 27,5
Error in line 9: XvEyLMDzf S600 69,4
Error in line 21: nVo7re S600 39,22
Error in line 14: yXcJ S600 8,1
Error in line 26: gmLWkYk S172 19H8
Error in line 10: 9RB S172 4,4
Error in line 29: yXcJ S875 41,4
Error in line 18: gmLWkYk S600 225,7
